--- a/dev-util/perf/ChangeLog
+++ b/dev-util/perf/ChangeLog
@@ -1,127 +1,98 @@
 # ChangeLog for dev-util/perf
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/perf/ChangeLog,v 1.20 2012/06/28 08:23:07 naota Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-*perf-3.4 (28 Jun 2012)
+*perf-3.15.5 (09 Aug 2015)
+*perf-3.13.1-r1 (09 Aug 2015)
+*perf-3.12 (09 Aug 2015)
+*perf-3.8-r1 (09 Aug 2015)
 
-  28 Jun 2012; Naohiro Aota <naota@gentoo.org> +perf-3.4.ebuild, metadata.xml:
-  Version bump; Assign myself as a maintainer.
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +perf-3.8-r1.ebuild, +perf-3.12.ebuild, +perf-3.13.1-r1.ebuild,
+  +perf-3.15.5.ebuild:
+  proj/gentoo: Initial commit
 
-*perf-3.2 (28 Feb 2012)
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  28 Feb 2012; Mike Frysinger <vapier@gentoo.org> -perf-2.6.35_rc4.ebuild,
-  -perf-3.1.ebuild, +perf-3.2.ebuild:
-  Fix automagic depends #390191 and clean up the ebuild.
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-*perf-3.1 (01 Nov 2011)
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  01 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +perf-3.1.ebuild:
-  Version bump. Improve install phase. Fix automagic dependency on
-  dev-libs/newt and python. Install python+perl tools. Ensure DWARF is built on
-  amd64.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-*perf-2.6.35_rc4 (11 Jul 2010)
+*perf-4.1.5 (14 Aug 2015)
 
-  11 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.33.1.ebuild, -perf-2.6.34.ebuild, -perf-2.6.35_rc3.ebuild,
-  +perf-2.6.35_rc4.ebuild:
-  Version bump to latest rc.
+  14 Aug 2015; Naohiro Aota <naota@gentoo.org> metadata.xml,
+  +perf-4.1.5.ebuild:
+  version bump to 4.1.5 (bug 544990)
 
-*perf-2.6.35_rc3 (12 Jun 2010)
+  Gentoo-Bug: 544990
 
-  12 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  +perf-2.6.35_rc3.ebuild:
-  Bump to latest rc.
+  Package-Manager: portage-2.2.20
 
-*perf-2.6.34 (18 May 2010)
+*perf-4.1.5-r1 (16 Aug 2015)
 
-  18 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> -perf-2.6.32.ebuild,
-  +perf-2.6.34.ebuild:
-  Version bump.
+  16 Aug 2015; Naohiro Aota <naota@gentoo.org> +files/perf-4.1.5-prefix.patch,
+  -perf-4.1.5.ebuild, +perf-4.1.5-r1.ebuild:
+  fix install dir
 
-*perf-2.6.33.1 (16 Mar 2010)
+  perf binary and libs are accidentaly installed under / not /usr. Add a
+  patch to fix "prefix=" behavior and reuse prefix argument.
 
-  16 Mar 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.33_rc6.ebuild, -perf-2.6.33_rc7.ebuild, +perf-2.6.33.1.ebuild:
-  Version bump and remove older RCs.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-*perf-2.6.33_rc7 (09 Feb 2010)
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  09 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  +perf-2.6.33_rc7.ebuild:
-  Version bump.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*perf-2.6.33_rc6 (31 Jan 2010)
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> perf-3.8-r1.ebuild,
+  perf-3.12.ebuild, perf-3.13.1-r1.ebuild, perf-3.15.5.ebuild,
+  perf-4.1.5-r1.ebuild:
+  Use https for kernel.org and redhat.com
 
-  31 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.33_rc2.ebuild, -perf-2.6.33_rc5.ebuild, +perf-2.6.33_rc6.ebuild,
-  metadata.xml:
-  Bump to rc6 (instead of revbumping) so that the RC patch is actually
-  applied. Huge thanks to Zeev Tarantov in bug #302387 for reporting and
-  providing the fix. Also introduce perl USE flag for the Perl scripting in
-  perf, and fix building with USE=perl and --as-needed (patch to be sent
-  upstream).
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  23 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  perf-2.6.33_rc2.ebuild, perf-2.6.33_rc5.ebuild:
-  Fix (again) bug #291801.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-*perf-2.6.33_rc5 (22 Jan 2010)
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  22 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
-  +perf-2.6.33_rc5.ebuild:
-  Bump to latest rc.
+  Bug: https://bugs.gentoo.org/552720
 
-*perf-2.6.33_rc2 (28 Dec 2009)
+  08 Oct 2015; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
+  audit: Switch to global 'audit' use flag where appropriate
 
-  28 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.33_rc1.ebuild, +perf-2.6.33_rc2.ebuild:
-  Version bump and cleanup previous rc.
+  Link: https://archives.gentoo.org/gentoo-
+  dev/message/32b1e333faa627491baa3c7492d64956
 
-*perf-2.6.33_rc1 (19 Dec 2009)
+  15 Nov 2015; Matt Turner <mattst88@gentoo.org> perf-4.1.5-r1.ebuild:
+  Add ~alpha.
 
-  19 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  +perf-2.6.33_rc1.ebuild:
-  Version bump.
-
-*perf-2.6.32 (04 Dec 2009)
-
-  04 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.32_rc7.ebuild, +perf-2.6.32.ebuild:
-  Bump to final .32 version.
-
-*perf-2.6.32_rc7 (16 Nov 2009)
-
-  16 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  -perf-2.6.32_rc6.ebuild, +perf-2.6.32_rc7.ebuild:
-  Version bump to latest rc; make the linux-info checks non-fatal since the
-  package builds anyway.
-
-  04 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  perf-2.6.32_rc6.ebuild:
-  Fix typo, closes bug #291801 by Zeev Tarantov.
-
-*perf-2.6.32_rc6 (03 Nov 2009)
-
-  03 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org> -perf-2.6.31.ebuild,
-  -perf-2.6.32_rc5.ebuild, +perf-2.6.32_rc6.ebuild:
-  Version bump to latest rc, make sure the ebuild is fixed to fetch properly
-  (was broken before), remove previous stuff.
-
-  31 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  perf-2.6.32_rc5.ebuild, metadata.xml:
-  Add doc USE flag to build documentation and man pages.
-
-*perf-2.6.32_rc5 (30 Oct 2009)
-
-  30 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
-  +perf-2.6.32_rc5.ebuild:
-  Bump to version 2.6.32_rc5 already, add support for patching in an RC
-  version.
-
-*perf-2.6.31 (30 Oct 2009)
-
-  30 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org> +perf-2.6.31.ebuild,
-  +metadata.xml:
-  Initial import of the performance counter userland utility.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
