--- a/metadata/md5-cache/dev-util/stressapptest-1.0.4
+++ b/metadata/md5-cache/dev-util/stressapptest-1.0.4
@@ -2,12 +2,12 @@ DEFINED_PHASES=install prepare
 DEPEND=dev-libs/libaio
 DESCRIPTION=Stressful Application Test
 EAPI=4
-HOMEPAGE=http://code.google.com/p/stressapptest/
+HOMEPAGE=https://code.google.com/p/stressapptest/
 IUSE=debug
-KEYWORDS=amd64 arm x86
+KEYWORDS=~amd64 ~arm ~x86
 LICENSE=Apache-2.0
 RDEPEND=dev-libs/libaio
 SLOT=0
-SRC_URI=http://stressapptest.googlecode.com/files/stressapptest-1.0.4_autoconf.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=332bab20c136f98df8b3247cec5196f1
+SRC_URI=https://stressapptest.googlecode.com/files/stressapptest-1.0.4_autoconf.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
+_md5_=622064d464ea424c94b077d752582f0c
