--- a/gnome-extra/yelp-xsl/ChangeLog
+++ b/gnome-extra/yelp-xsl/ChangeLog
@@ -1,217 +1,150 @@
 # ChangeLog for gnome-extra/yelp-xsl
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp-xsl/ChangeLog,v 1.59 2014/08/07 18:48:05 jer Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.12.0.ebuild:
-  Stable for HPPA (bug #512012).
+*yelp-xsl-3.16.1 (09 Aug 2015)
+*yelp-xsl-3.14.0 (09 Aug 2015)
+*yelp-xsl-3.12.0 (09 Aug 2015)
 
-  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.12.0.ebuild:
-  Stable for ppc, wrt bug #512012
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +yelp-xsl-3.12.0.ebuild, +yelp-xsl-3.14.0.ebuild, +yelp-xsl-3.16.1.ebuild:
+  proj/gentoo: Initial commit
 
-  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.12.0.ebuild:
-  Stable for x86, wrt bug #512012
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.12.0.ebuild:
-  Stable for amd64, wrt bug #512912
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  20 Jun 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for arm, wrt bug #508862
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  17 May 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for alpha, wrt bug #508862
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  14 May 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for sparc, wrt bug #508862
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  13 May 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for ia64, wrt bug #508862
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  11 May 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for ppc64, wrt bug #508862
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  10 May 2014; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for ppc, wrt bug #508862
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> yelp-xsl-3.12.0.ebuild,
+  yelp-xsl-3.14.0.ebuild, yelp-xsl-3.16.1.ebuild:
+  Convert URIs for gnome.org and kde.org to https
 
-*yelp-xsl-3.12.0 (27 Apr 2014)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +yelp-xsl-3.12.0.ebuild:
-  Version bump for Gnome 3.12.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -yelp-xsl-3.8.1.ebuild:
-  drop old
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Stable for HPPA (bug #499954).
+  Bug: https://bugs.gentoo.org/552720
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  x86 stable, bug 499954
+  07 Sep 2015; Mikle Kolyada <zlogene@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  amd64 stable wrt bug #551826
 
-  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  amd64 stable, bug 499954
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  Fix wrong commit, bug 502160
+  12 Sep 2015; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  x86 stable wrt bug #551826
 
-  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.10.1.ebuild:
-  arch stable, bug 888
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> yelp-xsl-3.10.1.ebuild,
-  yelp-xsl-3.6.1.ebuild, yelp-xsl-3.8.1.ebuild:
-  Add s390 love #469982.
+  16 Sep 2015; Tobias Klausmann <klausman@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  add alpha keyword
 
-*yelp-xsl-3.10.1 (24 Dec 2013)
+  Gentoo-Bug: 551826
 
-  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +yelp-xsl-3.10.1.ebuild,
-  -yelp-xsl-3.8.0.ebuild:
-  Version bump for Gnome 3.10
+  Package-Manager: portage-2.2.20.1
 
-  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.8.1.ebuild:
-  Stable for HPPA (bug #478252).
+  20 Sep 2015; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  Stable for HPPA (bug #551826).
 
-  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.8.1.ebuild:
-  x86 stable, bug #478252
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.8.1.ebuild:
-  amd64 stable, bug #478252
+  28 Sep 2015; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  Stable for PPC64 (bug #551826).
 
-  29 Aug 2013; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for HPPA (bug #482886).
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-*yelp-xsl-3.8.1 (14 May 2013)
+  03 Oct 2015; Markus Meier <maekke@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  arm stable, bug #551826
 
-  14 May 2013; Pacho Ramos <pacho@gentoo.org> +yelp-xsl-3.8.1.ebuild:
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="arm"
+
+  18 Oct 2015; Mikle Kolyada <zlogene@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  sparc stable wrt bug #551826
+
+  Package-Manager: portage-2.2.20.1
+
+  12 Nov 2015; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  ppc stable wrt bug #565086
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
+
+*yelp-xsl-3.18.1 (14 Nov 2015)
+
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org> +yelp-xsl-3.18.1.ebuild:
   Version bump
 
-  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for sparc, wrt bug #458984
+  Package-Manager: portage-2.2.24
 
-  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for alpha, wrt bug #458984
+  14 Nov 2015; Pacho Ramos <pacho@gentoo.org> -yelp-xsl-3.12.0.ebuild:
+  Drop old
 
-  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -yelp-xsl-3.4.2.ebuild:
-  Clean up old revision.
+  Package-Manager: portage-2.2.24
 
-  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for ia64, wrt bug #458984
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.16.1.ebuild:
+  ia64 stable wrt bug #565086
 
-*yelp-xsl-3.8.0 (28 Mar 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +yelp-xsl-3.8.0.ebuild:
-  Version bump for Gnome 3.8
+  26 Nov 2015; Gilles Dartiguelongue <eva@gentoo.org> -yelp-xsl-3.14.0.ebuild:
+  drop old revision
 
-  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for arm, wrt bug #458984
+  Package-Manager: portage-2.2.25
 
-  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for ppc64, wrt bug #458984
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for ppc, wrt bug #458984
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for x86, wrt bug #458984
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Stable for amd64, wrt bug #458984
+  21 Feb 2016; Pacho Ramos <pacho@gentoo.org> yelp-xsl-3.18.1.ebuild:
+  amd64 stable, bug 566378
 
-  25 Feb 2013; Zac Medico <zmedico@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~arm-linux keyword.
+  Package-Manager: portage-2.2.27
+  RepoMan-Options: --include-arches="amd64"
 
-  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~sh, wrt bug #449220
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-xsl-3.6.1.ebuild:
-  Switch to virtual/awk since it has been keyworded.
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-xsl-3.4.2.ebuild, yelp-xsl-3.6.1.ebuild,
-  -files/yelp-xsl-3.6.1-gawk.patch:
-  Undo previous commit: yelp-xsl works with all virtual/awk implementations
-  except for nawk, which is buggy (see bug #455786). However, the 3.6.1 ebuild
-  cannot switch to virtual/awk until it's keyworded on amd64-fbsd.
-
-  06 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
-  -yelp-xsl-3.2.1.ebuild, yelp-xsl-3.4.2.ebuild, yelp-xsl-3.6.1.ebuild,
-  +files/yelp-xsl-3.6.1-gawk.patch:
-  Ensure gawk, not virtual/awk is used; nawk fails on build scripts with syntax
-  errors (bug #455730, thanks to Christoph Junghans). Drop old.
-
-  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  keyword ~amd64-fbsd
-
-  06 Jan 2013; Markus Meier <maekke@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  add ~arm, bug #449220
-
-  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~sparc, wrt bug #449220
-
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~alpha, wrt bug #449220
-
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~ia64, wrt bug #449220
-
-  19 Dec 2012; Jeroen Roovers <jer@gentoo.org> yelp-xsl-3.4.2.ebuild,
-  yelp-xsl-3.6.1.ebuild:
-  Marked ~hppa (bug #447432).
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~ppc, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.6.1.ebuild:
-  Add ~ppc64, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.4.2.ebuild:
-  Add ~ppc64, wrt bug #447432
-
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.4.2.ebuild:
-  Add ~ppc, wrt bug #447432
-
-*yelp-xsl-3.6.1 (16 Dec 2012)
-
-  16 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  yelp-xsl-3.2.1.ebuild, -yelp-xsl-3.4.1.ebuild, yelp-xsl-3.4.2.ebuild,
-  +yelp-xsl-3.6.1.ebuild:
-  Version bump for gnome-3.6. Update license. Drop old.
-
-  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.4.2.ebuild:
-  Stable for amd64, wrt bug #427544
-
-  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-xsl-3.4.2.ebuild:
-  x86 stable wrt bug #427544
-
-*yelp-xsl-3.4.2 (20 May 2012)
-
-  20 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +yelp-xsl-3.4.2.ebuild:
-  Version bump.
-
-*yelp-xsl-3.4.1 (06 May 2012)
-
-  06 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
-  +yelp-xsl-3.4.1.ebuild:
-  Version bump, improves HTML output and DocBook handling.
-
-  05 May 2012; Jeff Horelick <jdhore@gentoo.org> yelp-xsl-3.2.1.ebuild:
-  dev-util/pkgconfig -> virtual/pkgconfig
-
-  29 Apr 2012; Markus Meier <maekke@gentoo.org> yelp-xsl-3.2.1.ebuild:
-  x86 stable, bug #410611
-
-  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.2.1.ebuild:
-  Stable for amd64, wrt bug #410611
-
-*yelp-xsl-3.2.1 (04 Nov 2011)
-
-  04 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
-  -yelp-xsl-3.0.2.ebuild, +yelp-xsl-3.2.1.ebuild:
-  Bump to 3.2.1 from the gnome overlay. Drop old. Notable changes: JavaScript
-  and CSS updates, DocBook fixes, peformance improvements. Drop alpha, arm,
-  hppa, ia64, ppc, ppc64, sparc keywords for itstool dependency.
-
-*yelp-xsl-3.0.2 (19 Aug 2011)
-
-  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +yelp-xsl-3.0.2.ebuild,
-  +metadata.xml:
-  Bump to 3.0.2, from gnome overlay for GNOME 3
