--- a/metadata/md5-cache/net-ftp/tftp-hpa-5.2
+++ b/metadata/md5-cache/net-ftp/tftp-hpa-5.2
@@ -2,12 +2,12 @@ DEFINED_PHASES=configure install prepare
 DEPEND=selinux? ( sec-policy/selinux-tftp ) readline? ( sys-libs/readline ) tcpd? ( sys-apps/tcp-wrappers ) !net-ftp/atftp !net-ftp/netkit-tftp app-arch/xz-utils
 DESCRIPTION=port of the OpenBSD TFTP server
 EAPI=4
-HOMEPAGE=http://www.kernel.org/pub/software/network/tftp/
+HOMEPAGE=https://www.kernel.org/pub/software/network/tftp/
 IUSE=ipv6 readline selinux tcpd
-KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd
-LICENSE=BSD
+KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~ppc-macos
+LICENSE=BSD-4
 RDEPEND=selinux? ( sec-policy/selinux-tftp ) readline? ( sys-libs/readline ) tcpd? ( sys-apps/tcp-wrappers ) !net-ftp/atftp !net-ftp/netkit-tftp
 SLOT=0
-SRC_URI=mirror://kernel/software/network/tftp/tftp-hpa/tftp-hpa-5.1.tar.xz
-_eclasses_=multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=09c013dfafb95d74b3be067c22929954
+SRC_URI=mirror://kernel/software/network/tftp/tftp-hpa/tftp-hpa-5.2.tar.xz
+_eclasses_=multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
+_md5_=4348253697034d8dd3991d2aa1ca8eb0
