--- a/metadata/md5-cache/net-misc/tlsdate-0.0.6
+++ b/metadata/md5-cache/net-misc/tlsdate-0.0.6
@@ -9,5 +9,5 @@ LICENSE=BSD
 RDEPEND=dev-libs/openssl dbus? ( sys-apps/dbus )
 SLOT=0
 SRC_URI=https://github.com/ioerror/tlsdate/tarball/tlsdate-0.0.6 -> tlsdate-0.0.6.tar.gz
-_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=3affe7fe102feaadd9d4a6768cc033d1
+_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	user	906f3c8eb3a2350a4f1191a89baa3e46	vcs-snapshot	b45be87e7012be0af8424e8a5644da1d
+_md5_=607fb2d1a966e1181e76bf4a8fd5fc10
