--- a/net-misc/tlsdate/ChangeLog
+++ b/net-misc/tlsdate/ChangeLog
@@ -1,43 +1,82 @@
 # ChangeLog for net-misc/tlsdate
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tlsdate/ChangeLog,v 1.8 2013/03/18 17:16:18 vapier Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  18 Mar 2013; Mike Frysinger <vapier@gentoo.org> tlsdate-0.0.6.ebuild:
-  Stabilize for all.
+*tlsdate-0.0.13 (09 Aug 2015)
+*tlsdate-0.0.12-r2 (09 Aug 2015)
+*tlsdate-0.0.12-r1 (09 Aug 2015)
+*tlsdate-0.0.12 (09 Aug 2015)
+*tlsdate-0.0.11 (09 Aug 2015)
+*tlsdate-0.0.6 (09 Aug 2015)
+*tlsdate-0.0.5 (09 Aug 2015)
+*tlsdate-0.0.4-r2 (09 Aug 2015)
+*tlsdate-0.0.4-r1 (09 Aug 2015)
+*tlsdate-0.0.4 (09 Aug 2015)
+*tlsdate-0.0.1 (09 Aug 2015)
 
-*tlsdate-0.0.6 (19 Feb 2013)
-
-  19 Feb 2013; Robin H. Johnson <robbat2@gentoo.org> +tlsdate-0.0.6.ebuild:
-  Version bump.
-
-*tlsdate-0.0.5 (23 Jan 2013)
-
-  23 Jan 2013; Mike Frysinger <vapier@gentoo.org> +tlsdate-0.0.5.ebuild:
-  Version bump.
-
-*tlsdate-0.0.4-r2 (19 Dec 2012)
-
-  19 Dec 2012; Mike Frysinger <vapier@gentoo.org>
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
   +files/tlsdate-0.0.4-compiler-flags.patch,
-  +files/tlsdate-0.0.4-configure-user-group.patch, +tlsdate-0.0.4-r2.ebuild:
-  Clean up compiler flag handling w/fix from upstream, and add dedicated
-  user/group for tlsdate to use when dropping root #447018 by Maxim Kammerer.
+  +files/tlsdate-0.0.4-configure-user-group.patch, +files/tlsdate.confd,
+  +files/tlsdate.rc, +files/tlsdated.confd, +files/tlsdated.rc, +metadata.xml,
+  +tlsdate-0.0.1.ebuild, +tlsdate-0.0.4.ebuild, +tlsdate-0.0.4-r1.ebuild,
+  +tlsdate-0.0.4-r2.ebuild, +tlsdate-0.0.5.ebuild, +tlsdate-0.0.6.ebuild,
+  +tlsdate-0.0.11.ebuild, +tlsdate-0.0.12.ebuild, +tlsdate-0.0.12-r1.ebuild,
+  +tlsdate-0.0.12-r2.ebuild, +tlsdate-0.0.13.ebuild:
+  proj/gentoo: Initial commit
 
-*tlsdate-0.0.4-r1 (11 Dec 2012)
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  11 Dec 2012; Mike Frysinger <vapier@gentoo.org> +files/tlsdate.confd,
-  +files/tlsdate.rc, +files/tlsdated.confd, +files/tlsdated.rc,
-  +tlsdate-0.0.4-r1.ebuild:
-  Drop install of unused ca-roots file #446426 by Maxim Kammerer.  Add init.d
-  files for tlsdate/tlsdated #446428 by Maxim Kammerer.
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-*tlsdate-0.0.4 (09 Nov 2012)
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  09 Nov 2012; Mike Frysinger <vapier@gentoo.org> +tlsdate-0.0.4.ebuild:
-  Version bump #442380 by Maxim Kammerer.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-*tlsdate-0.0.1 (09 Sep 2012)
+  09 Aug 2015; Ulrich Müller <ulm@gentoo.org> files/tlsdate.rc,
+  files/tlsdated.rc:
+  [QA] Remove executable bit from files, bug 550434.
 
-  09 Sep 2012; Mike Frysinger <vapier@gentoo.org> +metadata.xml
-  +tlsdate-0.0.1.ebuild:
-  Initial ebuild based on one from ChromiumOS by Elly Jones.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
+
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
+
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
+
+  Bug: https://bugs.gentoo.org/552720
+
+  17 Dec 2015; Mike Frysinger <vapier@gentoo.org> tlsdate-0.0.13.ebuild:
+  add arm64/m68k/s390/sh/sparc love
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
