--- a/metadata/md5-cache/sys-apps/gptfdisk-1.0.1
+++ b/metadata/md5-cache/sys-apps/gptfdisk-1.0.1
@@ -4,10 +4,10 @@ DESCRIPTION=GPT partition table manipulator for Linux
 EAPI=5
 HOMEPAGE=http://www.rodsbooks.com/gdisk/
 IUSE=kernel_linux ncurses static
-KEYWORDS=alpha amd64 arm ~arm64 ia64 ~mips ppc ppc64 sparc x86 ~amd64-linux ~arm-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=!static? ( dev-libs/popt ncurses? ( >=sys-libs/ncurses-5.7-r7:0= ) kernel_linux? ( sys-apps/util-linux ) )
 SLOT=0
-SRC_URI=mirror://sourceforge/gptfdisk/gptfdisk-0.8.10.tar.gz
+SRC_URI=mirror://sourceforge/gptfdisk/gptfdisk-1.0.1.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
-_md5_=cdc105b30f856d1d9f04549c3abefaaf
+_md5_=822942772858bc7963eeaf533c092e3d
