--- a/metadata/md5-cache/sys-apps/man-db-2.7.4
+++ b/metadata/md5-cache/sys-apps/man-db-2.7.4
@@ -3,11 +3,12 @@ DEPEND=>=dev-libs/libpipeline-1.4.0 berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdb
 DESCRIPTION=a man replacement that utilizes berkdb instead of flat files
 EAPI=4
 HOMEPAGE=http://www.nongnu.org/man-db/
-IUSE=berkdb +gdbm nls selinux static-libs zlib
+IUSE=berkdb +gdbm +manpager nls selinux static-libs zlib
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~arm-linux ~x86-linux
 LICENSE=GPL-3
+PDEPEND=manpager? ( app-text/manpager )
 RDEPEND=>=dev-libs/libpipeline-1.4.0 berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) !berkdb? ( !gdbm? ( sys-libs/gdbm ) ) sys-apps/groff zlib? ( sys-libs/zlib ) !sys-apps/man selinux? ( sec-policy/selinux-mandb )
 SLOT=0
-SRC_URI=mirror://nongnu/man-db/man-db-2.7.1.tar.xz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=5bea9696ad2a30b23898935e8c71cd86
+SRC_URI=mirror://nongnu/man-db/man-db-2.7.4.tar.xz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	user	906f3c8eb3a2350a4f1191a89baa3e46	versionator	99ae9d758cbe7cfed19170e7d48f5a9c
+_md5_=6bdd8f85671785872b0491d79c0eb0c7
