--- a/metadata/md5-cache/sys-apps/sandbox-2.9
+++ b/metadata/md5-cache/sys-apps/sandbox-2.9
@@ -4,9 +4,9 @@ DESCRIPTION=sandbox'd LD_PRELOAD hack
 EAPI=0
 HOMEPAGE=https://www.gentoo.org/proj/en/portage/sandbox/
 IUSE=multilib
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd -x86-fbsd
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 SLOT=0
-SRC_URI=mirror://gentoo/sandbox-2.6.tar.xz https://dev.gentoo.org/~vapier/dist/sandbox-2.6.tar.xz
+SRC_URI=mirror://gentoo/sandbox-2.9.tar.xz https://dev.gentoo.org/~vapier/dist/sandbox-2.9.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	unpacker	1d149d9bda7723e740cfd28118f27813
-_md5_=3f8625970331d207ef39954e99d38226
+_md5_=f5dd09d91d335f4774802b296b7efc14
